# SlicerQAExtension

./: .gitignore  CMakeLists.txt  DWIPreprocessingQA.py  DWIrawQA.py  DerivedImageQA.py  README.md  SlicerDerivedImageEval.py  database.cfg.EXAMPLE  database_helper.py  derived_logic.py  dwi_helper.py  dwi_logic.py  dwi_raw_helper.py  dwi_raw_logic.py  example.cfg  logic.py  module_locator.py  module_name.cfg.EXAMPLE  uiTestTemp.py  writeConfigFile.py
DWI/: CMakeLists.txt  dwiPreprocessingQA.py  logic.py
DWI/Testing/: databaseSQL.txt
DWI/Testing/Python/: databaseTest.py  temp_SimpleUILoaderTest.py
DerivedImage/: CMakeLists.txt  DerivedImageEval.py  logic.py
DerivedImage/Testing/Python/: CMakeLists.txt
QALib/: __init__.py
QALib/derived_images/: __init__.py  helper.py  logic.py
QALib/dwi_preprocess/: __init__.py  helper.py  logic.py
QALib/dwi_raw/: __init__.py  helper.py  logic.py  reader.py
Resources/ColorFile/: IPL-BrainAtlas-ColorFile.txt
Resources/HTML/: dwi_raw.css  dwi_raw_1.html  dwi_raw_2.html  dwi_raw_3.html  dwi_raw_4.html
Resources/Python/pg8000-1.08/: _ssl.py
Resources/UI/: QEvaluationWidget.ui  dwiArtifactWidget.ui  dwiRawQuestionWidget.ui  evaluationPrototype.ui  followUpDialog.ui  imageQACollapsibleButton.ui  navigationCollapsibleButton.ui  queryQACollapsibleButton.ui  reviewButtonsWidget.ui  simple.ui
Resources/UI/qMRMLSlicerEvaluatorWidget/: README  qMRMLSlicerEvaluatorWidget.cxx  qMRMLSlicerEvaluatorWidget.h  qMRMLSlicerEvaluatorWidget.ui  qMRMLSlicerEvaluatorWidgetPlugin.cxx  qMRMLSlicerEvaluatorWidgetPlugin.h
Testing/: database.csv  databaseSQL.txt  sqlTest.db
Testing/Python/: CMakeLists.txt  LockedFileListTest.py  databaseTest.py  test_helper.txt
Testing/Python/derived_images/: test_helper.txt
